fix error form data upload

--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-EXPO_PUBLIC_API_URL=https://backend-83237713974.asia-southeast1.run.app/predict/histories
-EXPO_PUBLIC_API_KEY=abc123
+EXPO_PUBLIC_API_URL=https://backend-83237713974.asia-southeast1.run.app
