--- a/package.json
+++ b/package.json
@@ -18,12 +18,14 @@
     "expo": "~52.0.11",
     "expo-asset": "~11.0.1",
     "expo-dev-client": "~5.0.4",
+    "expo-image-picker": "~16.0.3",
     "expo-splash-screen": "~0.29.13",
     "expo-system-ui": "~4.0.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.3",
     "react-native-edge-to-edge": "^1.1.3",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.1.0",
